force-app/main/default/objects/Cost_Sheet__c/Cost_Sheet__c.object-meta.xml
<CustomObject>
    <description>Quotation/cost sheet for a unit against a lead</description>
    <label>Cost Sheet</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>Cost Sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>