force-app/main/default/objects/Cost_Sheet__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <label>Approval Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>