force-app/main/default/objects/Cost_Sheet__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approved Cost Sheets</relationshipLabel>
    <relationshipName>Approved_Cost_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>