force-app/main/default/objects/Cost_Sheet__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Cost Sheets</relationshipLabel>
    <relationshipName>Cost_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>