force-app/main/default/objects/Cost_Sheet__c/fields/Calc_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Calc_Agreement_Value__c</fullName>
    <label>Agreement Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>