force-app/main/default/objects/Cost_Sheet__c/fields/Calc_Corpus_Total__c.field-meta.xml
<CustomField>
    <fullName>Calc_Corpus_Total__c</fullName>
    <label>Corpus Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>