force-app/main/default/objects/Cost_Sheet__c/fields/Calc_Net_Payable__c.field-meta.xml
<CustomField>
    <fullName>Calc_Net_Payable__c</fullName>
    <label>Net Payable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>