force-app/main/default/objects/Cost_Sheet__c/fields/Calc_Stamp_Duty_Amount__c.field-meta.xml
<CustomField>
    <fullName>Calc_Stamp_Duty_Amount__c</fullName>
    <label>Stamp Duty Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>