force-app/main/default/objects/Cost_Sheet__c/fields/Corpus_Fund_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Fund_Sqft__c</fullName>
    <label>Corpus Fund Per Sqft</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>