force-app/main/default/objects/Cost_Sheet__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Created Cost Sheets</relationshipLabel>
    <relationshipName>Created_Cost_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>