force-app/main/default/objects/Cost_Sheet__c/fields/Discount_1__c.field-meta.xml
<CustomField>
    <fullName>Discount_1__c</fullName>
    <label>Discount 1</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>