force-app/main/default/objects/Cost_Sheet__c/fields/Discount_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Discount_1_Label__c</fullName>
    <label>Discount 1 Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>