force-app/main/default/objects/Cost_Sheet__c/fields/Discount_2__c.field-meta.xml
<CustomField>
    <fullName>Discount_2__c</fullName>
    <label>Discount 2</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>