force-app/main/default/objects/Cost_Sheet__c/fields/Discount_3__c.field-meta.xml
<CustomField>
    <fullName>Discount_3__c</fullName>
    <label>Discount 3</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>