force-app/main/default/objects/Cost_Sheet__c/fields/Discount_3_Label__c.field-meta.xml
<CustomField>
    <fullName>Discount_3_Label__c</fullName>
    <label>Discount 3 Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>