force-app/main/default/objects/Cost_Sheet__c/fields/Discount_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Discount_Sqft__c</fullName>
    <label>Discount Per Sqft</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>