force-app/main/default/objects/Cost_Sheet__c/fields/Floor_Rise_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Sqft__c</fullName>
    <label>Floor Rise Per Sqft</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>