force-app/main/default/objects/Cost_Sheet__c/fields/GST_Pct__c.field-meta.xml
<CustomField>
    <fullName>GST_Pct__c</fullName>
    <label>GST %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>