force-app/main/default/objects/Cost_Sheet__c/fields/Highest_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Highest_Approval_Level__c</fullName>
    <label>Highest Approval Level Required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>