force-app/main/default/objects/Cost_Sheet__c/fields/Maintenance_Sqft_Month__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Sqft_Month__c</fullName>
    <label>Maintenance Per Sqft/Month</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>