force-app/main/default/objects/Cost_Sheet__c/fields/Maintenance_Total__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Total__c</fullName>
    <label>Maintenance Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>