force-app/main/default/objects/Cost_Sheet__c/fields/Payment_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Type__c</fullName>
    <label>Payment Plan Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>