force-app/main/default/objects/Cost_Sheet__c/fields/PLC_Charges__c.field-meta.xml
<CustomField>
    <fullName>PLC_Charges__c</fullName>
    <label>PLC Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>