force-app/main/default/objects/Cost_Sheet__c/fields/Stamp_Duty_Pct__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Pct__c</fullName>
    <label>Stamp Duty %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>