force-app/main/default/objects/Cost_Sheet__c/fields/Super_Builtup_Area__c.field-meta.xml
<CustomField>
    <fullName>Super_Builtup_Area__c</fullName>
    <label>Super Built-up Area (sqft)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>