force-app/main/default/objects/Cost_Sheet__c/fields/UDS__c.field-meta.xml
<CustomField>
    <fullName>UDS__c</fullName>
    <label>UDS (sqft)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>