force-app/main/default/objects/Cost_Sheet__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Cost Sheets</relationshipLabel>
    <relationshipName>Cost_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>