force-app/main/default/objects/Cost_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Unit__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Lead__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>